--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ tensorflow==2.5.0
 torch==1.9.0
 tqdm==4.62.0
 transformers==4.9.1
+promptsource @ git+https://git@github.com/bigscience-workshop/promptsource.git@main
+aiohttp==3.7.4
