--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-datasets==1.11.0
-jinja2==3.0.1
-tensorflow==2.5.0
-torch==1.9.0
-tqdm==4.62.0
-transformers==4.9.1
-sacrebleu==2.0.0
+torch>=1.9.0
+transformers>=4.9.1
+datasets>=1.11.0
+jinja2>=3.0.1
+tqdm>=4.62.0
+sacrebleu>=2.0.0
